log
Thu 21 Mar 2024 08:12:16 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|4
total_score: 10/70
2434d7e
Thu 21 Mar 2024 08:15:05 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:62:20: error: implicit declaration of function ‘head’ [-Werror=implicit-function-declaration]
   62 |    int *elemento = head(L);
      |                    ^~~~
exercises.c:62:20: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
8549ce1
Thu 21 Mar 2024 08:17:48 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
708ee6f
Thu 21 Mar 2024 08:18:06 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
e9dd0c2
